# ai-insight-system

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.yaml
src/: __init__.py
src/analyzers/: __init__.py  base_analyzer.py
src/collectors/: __init__.py  base_collector.py
src/config/: __init__.py  settings.py
src/scheduler/: __init__.py  jobs.py
