[project]
name = "ai-insight-system"
version = "0.1.0"
description = "AI Model and Paper Analysis System - Automated daily insights on latest AI models and research"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Insight Team"}
]
keywords = ["ai", "machine-learning", "analysis", "arxiv", "huggingface"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "arxiv>=2.1.0",
    "PyGithub>=2.1.0",
    "huggingface-hub>=0.19.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "anthropic>=0.8.0",
    "openai>=1.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "gradio>=4.8.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
ai-insight = "src.cli.main:cli"
ai-insight-gui = "src.gui.app:launch"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"